fix the overflow using the wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,10 @@ body{
      color: #232323;
      font-family: 'Poppins', sans-serif;
  }
+
+.wrap{
+    overflow: hidden;
+}
 .header{
     background: #121416;
     color: #ffffff;
@@ -167,7 +171,7 @@ a.shop{
 .gallery-item{
     text-align: left;
     box-sizing: border-box;
-    margin-left: 10px;
+    padding: 10px;
 }
 
 .gallery-item > a{
